# qrab

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: SMOKE-TEST.md
docs/branding/: extractions.json
scripts/: extract-icons.mjs
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  hotkey.rs  lib.rs  logging.rs  main.rs  screenshot.rs  settings.rs  tray.rs  update.rs  windows.rs
src-tauri/src/capture/: mod.rs  xcap_impl.rs
src-tauri/src/decoder/: mod.rs  rqrr_impl.rs
src-tauri/src/storage/: mod.rs  queries.rs  schema.rs
src-tauri/tests/: decoder.rs
src/components/: ClearHistoryDialog.tsx  ConfirmOpenAll.test.tsx  ConfirmOpenAll.tsx  EmptyState.tsx  HistoryFilters.test.tsx  HistoryFilters.tsx  HistorySelectionBar.tsx  HistoryTable.tsx  HotkeyInput.tsx  RegionSelector.test.tsx  RegionSelector.tsx  ResultCard.tsx  Titlebar.tsx
src/components/ui/: Button.tsx  Card.tsx  Dialog.tsx  Switch.tsx  TextField.tsx  Toast.tsx
src/lib/: bulkOpen.test.ts  bulkOpen.ts  classify.test.ts  classify.ts  format.test.ts  format.ts  ipc.ts  log.ts  state.ts  theme.ts  types.ts
src/test/: setup.ts
src/windows/: ConfigWindow.tsx  HistoryWindow.tsx  RegionSelectWindow.tsx  ResultsWindow.test.tsx  ResultsWindow.tsx  SettingsWindow.tsx
