[package]
name = "qrab"
version = "0.1.0"
description = "Capture and decode QR codes visible on your screen"
authors = ["Lenin Boccardo de Andrade"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qrab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.6"
rqrr = "0.9"
# PNG for the held-screenshot encoding path; JPEG and WebP so the file
# decoder (decode_image_file) accepts the formats users typically have
# saved screenshots in.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Update-check HTTP client. rustls-tls keeps us off OpenSSL; no native
# tls deps means the cross-platform CI build stays uniform. `json` pulls
# in serde_json which is already a transitive dep via tauri/serde.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
qrcode = { version = "0.14", default-features = false, features = ["image"] }

# Release-profile tuning for the v1.0 binary (CLAUDE.md §2 target: < 18 MB).
#
# * lto = "fat"   — link-time optimization across the whole binary.
# * codegen-units = 1  — slower build, smaller output; one compilation unit
#                       gives the optimizer more to work with.
# * strip = true   — drop debug symbols from the produced binary.
# * opt-level = "s" — favor size over raw speed. rqrr / image still get
#                     enough optimization (it's "s", not "z") that decode
#                     stays fast.
# * panic = "abort" — no unwinding tables in release. CLAUDE.md §15
#                     forbids `unwrap()`/`expect()` in production paths,
#                     so panics should never happen here in the first place.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "s"
panic = "abort"

